整合了一波Society界面

--- a/app/src/main/res/layout/fragment_society_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_society_baseinfo.xml
@@ -101,7 +101,7 @@
             app:contentPadding="10dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -123,6 +123,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="center"
                         android:text="RoseChan"
                         android:textSize="18sp"/>
 
@@ -146,6 +147,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="center"
                         android:text="学院街xxxx号xxx室"
                         android:textSize="18sp"/>
                 </LinearLayout>
@@ -168,6 +170,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="center"
                         android:text="50"
                         android:textSize="18sp"/>
                 </LinearLayout>
@@ -188,27 +191,98 @@
             app:cardElevation="4dp"
             app:contentPadding="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:text="社团电话"
-                android:textSize="15sp"/>
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvSocietyPhone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_vertical"
-                android:text="15079192155"
-                android:textSize="18sp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <ImageView
-                android:layout_marginRight="10dp"
-                android:src="@drawable/ic_call"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="right"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left|center_vertical"
+                        android:text="社团电话"
+                        android:textSize="15sp"/>
+
+                    <TextView
+                        android:id="@+id/tvSocietyPhone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="15079192155"
+                        android:textSize="18sp"/>
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_gravity="end"
+                        android:src="@drawable/ic_call"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left|center_vertical"
+                        android:text="社团QQ"
+                        android:textSize="15sp"/>
+
+                    <TextView
+                        android:id="@+id/tvSocietyQQ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="870536460"
+                        android:textSize="18sp"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
         </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cvMembers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="4dp"
+            app:contentPadding="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:text="社团人员"
+                    android:textSize="15sp"/>
+
+                <com.soldiersoul.wutu.views.NoScrollListView
+                    android:layout_marginTop="8dp"
+                    android:id="@+id/lvSocietyMembers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </ScrollView>
