--- a/app/src/main/res/layout/society_photo_album.xml
+++ b/app/src/main/res/layout/society_photo_album.xml
@@ -9,20 +9,21 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
-    app:cardCornerRadius="18dp"
+    app:cardCornerRadius="12dp"
     app:cardElevation="4dp"
-    app:contentPadding="15dp">
+    app:contentPadding="10dp">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:src="@mipmap/ic_launcher"
             android:id="@+id/ivAlbumLogo"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="80dp"/>
 
         <TextView
             android:id="@+id/tvAlbumName"
@@ -30,17 +31,15 @@
             style="@style/Base.TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/ivAlbumLogo"
-            android:layout_toRightOf="@id/ivAlbumLogo"/>
+            android:layout_centerHorizontal="true"/>
 
         <TextView
             android:text="2017-1-1"
             android:id="@+id/tvAlbumTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/ivAlbumLogo"
-            android:layout_toRightOf="@id/ivAlbumLogo"/>
+            android:layout_alignBottom="@id/ivAlbumLogo"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
