社团活动时间轴准备

--- a/app/src/main/res/layout/fragment_society_act.xml
+++ b/app/src/main/res/layout/fragment_society_act.xml
@@ -4,10 +4,9 @@
              android:layout_height="match_parent"
              tools:context="com.soldiersoul.wutu.society.SocietyActFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+    <com.baoyachi.stepview.VerticalStepView
+        android:id="@+id/stepView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
