完成社团活动界面和时间轴，考虑合并积分到活动

--- a/app/src/main/res/layout/fragment_society_act.xml
+++ b/app/src/main/res/layout/fragment_society_act.xml
@@ -4,9 +4,13 @@
              android:layout_height="match_parent"
              tools:context="com.soldiersoul.wutu.society.SocietyActFragment">
 
-    <com.baoyachi.stepview.VerticalStepView
-        android:id="@+id/stepView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvTimeLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:clipToPadding="false"/>
+
+
 
 </FrameLayout>
