--- a/app/src/main/res/layout/text_item.xml
+++ b/app/src/main/res/layout/text_item.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/list_item_container"
+    <TextView
+        android:id="@+id/item_text"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/xxx1" />
-
-
-    <ImageView
-        android:id="@+id/list_item_btn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/video_click_play_selector" />
-
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:minLines="2"
+        android:padding="10dp"
+        android:textSize="15sp" />
+</LinearLayout>
