--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
+    android:scrollbars="none"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -74,11 +74,19 @@
             app:itemText="更换主题"/>
 
         <com.soldiersoul.wutu.views.SimpleMenuItem
-            android:id="@+id/itemUpdate"
+            android:id="@+id/itemClearCache"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:layout_marginTop="20dp"
+            app:imgSrc="@drawable/ic_clearcache"
+            app:itemText="清除缓存"/>
+
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
             app:imgSrc="@drawable/ic_update"
             app:itemText="检查更新"/>
 
