--- a/app/src/main/res/layout/fragment_society_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_society_baseinfo.xml
@@ -50,7 +50,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            app:cardCornerRadius="18dp"
             app:cardElevation="4dp"
             app:contentPadding="15dp">
 
@@ -96,7 +95,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="10dp"
-            app:cardCornerRadius="18dp"
             app:cardElevation="4dp"
             app:contentPadding="10dp">
 
@@ -187,7 +185,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="10dp"
-            app:cardCornerRadius="18dp"
             app:cardElevation="4dp"
             app:contentPadding="10dp">
 
@@ -219,6 +216,7 @@
                         android:textSize="18sp"/>
 
                     <ImageView
+                        android:id="@+id/ivCall"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="end"
@@ -260,7 +258,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="10dp"
-            app:cardCornerRadius="18dp"
             app:cardElevation="4dp"
             app:contentPadding="10dp">
 
