完成用户信息修改界面，准备添加头像修改

--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -10,6 +10,7 @@
     <requestFocus/>
 
     <RelativeLayout
+        android:background="@drawable/white_btn_selector"
         android:id="@+id/userAvatarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
