--- a/app/src/main/res/layout/text_item.xml
+++ b/app/src/main/res/layout/text_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <FrameLayout
+    <ImageView
         android:id="@+id/list_item_container"
         android:layout_width="match_parent"
         android:layout_height="200dp"
