--- a/app/src/main/res/layout/fragment_society_integral.xml
+++ b/app/src/main/res/layout/fragment_society_integral.xml
@@ -2,12 +2,14 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.soldiersoul.wutu.society.SocietyIntegralFragment">
+             >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:focusable="true"
+        android:id="@+id/rvSocietyIntegral"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusableInTouchMode="true"/>
 
 </FrameLayout>
