--- a/app/src/main/res/layout/fragment_society_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_society_baseinfo.xml
@@ -12,36 +12,36 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/llLocate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/locate_city_selector"
-            android:clickable="true"
-            android:elevation="4dp"
-            android:gravity="center"
-            android:padding="20dp">
+        <!--<LinearLayout-->
+            <!--android:id="@+id/llLocate"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/locate_city_selector"-->
+            <!--android:clickable="true"-->
+            <!--android:elevation="4dp"-->
+            <!--android:gravity="center"-->
+            <!--android:padding="20dp">-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:src="@drawable/ic_locate_o"/>
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginRight="8dp"-->
+                <!--android:src="@drawable/ic_locate_o"/>-->
 
-            <com.soldiersoul.wutu.views.MarqueeTextView
-                android:id="@+id/tvLocation"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:lines="1"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="@string/society_textLocation"/>
+            <!--<com.soldiersoul.wutu.views.MarqueeTextView-->
+                <!--android:id="@+id/tvLocation"-->
+                <!--android:layout_width="200dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:ellipsize="marquee"-->
+                <!--android:focusable="true"-->
+                <!--android:focusableInTouchMode="true"-->
+                <!--android:lines="1"-->
+                <!--android:marqueeRepeatLimit="marquee_forever"-->
+                <!--android:scrollHorizontally="true"-->
+                <!--android:singleLine="true"-->
+                <!--android:text="@string/society_textLocation"/>-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -150,28 +150,6 @@
                         android:textSize="18sp"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="社团人数"
-                        android:textSize="15sp"/>
-
-                    <TextView
-                        android:id="@+id/tvSocietyMemberCount"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="50"
-                        android:textSize="18sp"/>
-                </LinearLayout>
 
             </LinearLayout>
 
