--- a/app/src/main/res/layout/fragment_society_photo.xml
+++ b/app/src/main/res/layout/fragment_society_photo.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.society.SocietyPhotoFragment">
+    tools:context="com.soldiersoul.wutu.society.frags.SocietyPhotoFragment">
 
     <android.support.v7.widget.RecyclerView
         android:focusable="true"
