--- a/app/src/main/res/layout/societyalbum_empty_layout.xml
+++ b/app/src/main/res/layout/societyalbum_empty_layout.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:gravity="center"
         android:orientation="vertical"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_gravity="center"
