--- a/app/src/main/res/layout/society_photo.xml
+++ b/app/src/main/res/layout/society_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,5 +11,12 @@
         android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
+    
+    <TextView
+        android:text="相册名"
+        android:id="@+id/tvPhotoName"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</LinearLayout>
