--- a/app/src/main/res/layout/activity_show_weapon.xml
+++ b/app/src/main/res/layout/activity_show_weapon.xml
@@ -5,21 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.soldiersoul.wutu.weapon.ShowWeaponActivity">
 
-    <com.soldiersoul.wutu.weapon.openGL.GLView
-        android:id="@+id/glView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvWeapon"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
+    
+    <!--<com.soldiersoul.wutu.weapon.openGL.GLView-->
+        <!--android:id="@+id/glView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
+    <!--<SeekBar-->
+        <!--android:id="@+id/seekBar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"/>-->
 
 </RelativeLayout>
