--- a/app/src/main/res/layout/fragment_weapon.xml
+++ b/app/src/main/res/layout/fragment_weapon.xml
@@ -19,29 +19,29 @@
     <ImageView
         android:id="@+id/ivPistol"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
+        android:layout_height="120dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/ic_shouqiang"/>
 
     <ImageView
         android:id="@+id/ivMusket"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
+        android:layout_height="120dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/ic_chongfengqiang"/>
 
     <ImageView
         android:id="@+id/ivMissile"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
+        android:layout_height="120dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/ic_daodan"/>
 
     <ImageView
         android:id="@+id/ivTank"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
+        android:layout_height="120dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/ic_tank"/>
 
 </LinearLayout>
