--- a/app/src/main/res/layout/weapon_list_layout.xml
+++ b/app/src/main/res/layout/weapon_list_layout.xml
@@ -1,34 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-                android:id="@+id/rlWeapon"
-              android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/ivWeaponImg"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="100dp"
-        android:layout_height="80dp"/>
-    
-    <TextView
-        android:id="@+id/tvWeaponTitle"
-        style="@style/Base.TextAppearance.AppCompat.Title"
-        android:gravity="center"
+    <RelativeLayout
+        android:id="@+id/rlWeapon"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/ivWeaponImg"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_marginRight="16dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher"/>
+
+        <TextView
+            android:id="@+id/tvWeaponTitle"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/ivWeaponImg"
+            android:layout_toRightOf="@+id/ivWeaponImg"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/tvWeaponCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/ivWeaponImg"
+            android:layout_toRightOf="@id/ivWeaponImg"
+            android:gravity="center"/>
+
+    </RelativeLayout>
+
+    <com.like.LikeButton
+        android:id="@+id/ivLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/ivWeaponImg"
-        android:layout_toEndOf="@+id/ivWeaponImg"
-        android:layout_above="@+id/tvCountry"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="20dp"
+        app:icon_size="25dp"/>
 
-    <TextView
-        android:id="@+id/tvCountry"
-        android:gravity="bottom"
-        android:layout_alignBottom="@id/ivWeaponImg"
-        android:layout_toRightOf="@id/ivWeaponImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    
 
 </RelativeLayout>
