--- a/app/src/main/res/layout/society_integral_item.xml
+++ b/app/src/main/res/layout/society_integral_item.xml
@@ -1,5 +1,5 @@
 <android.support.v7.widget.CardView
-    android:id="@+id/cvAlbum"
+    android:id="@+id/cvIntegral"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -27,13 +27,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
 
-        <TextView
-            android:text="任务内容"
-            android:id="@+id/tv_integralcontent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <!--<TextView-->
+            <!--android:text="任务内容"-->
+            <!--android:id="@+id/tv_integralcontent"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
 
-            android:maxLines="5"/>
+            <!--android:maxLines="5"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,10 +50,9 @@
                 android:text="任务奖励"
                 android:id="@+id/tv_integralreward"
                 android:layout_width="0dp"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:layout_height="wrap_content"
-                />
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
 
