--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 app:imgSrc="@drawable/ic_collect"
-                app:itemText="我的收藏"/>
+                app:itemText="武器收藏"/>
 
             <com.soldiersoul.wutu.views.SimpleMenuItem
                 android:id="@+id/itemChangeSkin"
