--- a/app/src/main/res/layout/activity_society_integral_detail.xml
+++ b/app/src/main/res/layout/activity_society_integral_detail.xml
@@ -16,21 +16,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
         <TextView
             android:id="@+id/tvIntegralDeadLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"/>
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"/>
+
         <TextView
             android:paddingTop="12dp"
             android:id="@+id/tvIntegralPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-    </LinearLayout>
 
     <TextView
         android:paddingTop="12dp"
