--- a/app/src/main/res/layout/fragment_military.xml
+++ b/app/src/main/res/layout/fragment_military.xml
@@ -1,16 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.soldiersoul.wutu.military.MilitaryFragment">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.soldiersoul.wutu.military.MilitaryFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:padding="5dp"
         android:background="@color/colorPrimary"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:padding="5dp">
 
         <LinearLayout
             android:id="@+id/ll_ad"
@@ -25,27 +26,27 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/ic_ad" />
+                android:background="@drawable/ic_ad"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="军事宣传"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
         </LinearLayout>
 
         <View
-            android:layout_toRightOf="@id/ll_ad"
             android:layout_width="1dp"
             android:layout_height="match_parent"
+            android:layout_toRightOf="@id/ll_ad"
             android:background="#8e8e8e"/>
 
         <LinearLayout
             android:id="@+id/ll_policy"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginRight="30dp"
             android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_toRightOf="@id/ll_ad"
             android:gravity="center_horizontal"
             android:orientation="vertical">
@@ -55,19 +56,19 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/ic_policy" />
+                android:background="@drawable/ic_policy"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="政策福利"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
         </LinearLayout>
 
         <View
-            android:layout_toRightOf="@id/ll_policy"
             android:layout_width="1dp"
             android:layout_height="match_parent"
+            android:layout_toRightOf="@id/ll_policy"
             android:background="#8e8e8e"/>
 
 
@@ -85,35 +86,50 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/ic_city" />
+                android:background="@drawable/ic_city"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="省份详情"
-                android:textSize="14sp" />
+                android:textSize="14sp"/>
         </LinearLayout>
 
 
     </RelativeLayout>
 
 
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/military_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/military_news"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/military_refresh"
+            android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp" />
+            android:layout_height="match_parent">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/military_news"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"/>
 
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_view"
+            app:indicatorColor="@color/colorPrimary"
+            android:layout_width="200dp"
+            android:layout_gravity="center"
+            android:layout_height="200dp"
+            app:indicatorName="BallClipRotatePulseIndicator"
+            />
+
+    </FrameLayout>
 
 </LinearLayout>
