--- a/app/src/main/res/layout/activity_mad.xml
+++ b/app/src/main/res/layout/activity_mad.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_mad"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.military.MadActivity">
+<RelativeLayout android:id="@+id/activity_mad"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.soldiersoul.wutu.military.MadActivity">
 
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/military_mad_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/military_mad_recyclerview"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/military_mad_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-             />
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:visibility="invisible">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/military_mad_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                />
+
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/loading_view"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                app:indicatorColor="@color/colorPrimary"
+                app:indicatorName="BallClipRotatePulseIndicator"
+                />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+    </FrameLayout>
 
 </RelativeLayout>
