--- a/app/src/main/res/layout/mutil_item.xml
+++ b/app/src/main/res/layout/mutil_item.xml
@@ -25,8 +25,9 @@
             <ImageView
                 android:src="@mipmap/ic_launcher"
                 android:id="@+id/ivMadpic"
-                android:layout_width="80dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:scaleType="centerCrop"
+                android:layout_height="80dp"
                 android:layout_marginRight="10dp"/>
 
             <TextView
@@ -39,10 +40,6 @@
                 android:layout_toRightOf="@id/ivMadpic"/>
 
             <TextView
-                android:text="内容---------------------------------------------------
-                -------------------------------------------------------------------
-                ----------------------------------------------------------------------------------
-                -------------------------------"
                 android:id="@+id/tvMadContent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,6 +47,7 @@
                 android:maxLines="4"
                 android:layout_below="@id/tvMadTitle"
                 android:layout_toRightOf="@id/ivMadpic"/>
+
             <TextView
                 android:id="@+id/tvMadTime"
                 android:layout_width="wrap_content"
@@ -58,8 +56,7 @@
                 android:layout_below="@id/tvMadContent"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:text="2017.2.28"/>
+                android:layout_marginRight="10dp"/>
 
         </RelativeLayout>
 
