--- a/app/src/main/res/layout/activity_mpolicy.xml
+++ b/app/src/main/res/layout/activity_mpolicy.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:id="@+id/activity_mpolicy"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.soldiersoul.wutu.military.MpolicyActivity">
 
 
+        <!--<android.support.v4.widget.SwipeRefreshLayout-->
+            <!--android:id="@+id/military_mpolicy_refresh"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:visibility="invisible">-->
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/military_mpolicy_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/military_mpolicy_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingLeft="3dp"
+                android:visibility="gone"
+                android:paddingRight="3dp"
+                />
+        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/military_mpolicy_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-             />
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_view"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            app:indicatorColor="@color/colorPrimary"
+            app:indicatorName="BallClipRotatePulseIndicator"
+            />
+
 
 </RelativeLayout>
