--- a/app/src/main/res/layout/fragment_military.xml
+++ b/app/src/main/res/layout/fragment_military.xml
@@ -127,8 +127,7 @@
             android:layout_width="200dp"
             android:layout_gravity="center"
             android:layout_height="200dp"
-            app:indicatorName="BallClipRotatePulseIndicator"
-            />
+            app:indicatorName="BallClipRotatePulseIndicator"/>
 
     </FrameLayout>
 
