--- a/app/src/main/res/layout/activity_guide_activitiy.xml
+++ b/app/src/main/res/layout/activity_guide_activitiy.xml
@@ -5,22 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.soldiersoul.wutu.login.GuideActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <cn.bingoogolapple.bgabanner.BGABanner
-        android:id="@+id/banner"
-        app:banner_pageChangeDuration="1000"
-        app:banner_pointAutoPlayAble="false"
-        app:banner_pointContainerBackground="@android:color/transparent"
-        app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
-        app:banner_pointTopBottomMargin="15dp"
-        app:banner_transitionEffect="alpha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <!--<com.soldiersoul.wutu.views.CustomerVideoView-->
+        <!--android:id="@+id/vp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gifView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/gif1"
+        android:scaleType="fitXY"/>
+
 
 </RelativeLayout>
